chore: fix sticker shadow light/dark mode

--- a/src/components/pagination/pagination-popover.module.scss
+++ b/src/components/pagination/pagination-popover.module.scss
@@ -14,7 +14,7 @@
 .popup {
 	background: var(--page-popup_background-color);
 	border: var(--page-popup_border-width) solid var(--page-popup_border-color);
-	box-shadow: var(--shadow_popup_light);
+	box-shadow: var(--shadow_popup);
 	min-width: 13.5rem;
 	border-radius: var(--page-popup_corner-radius);
 }
